# stride

./: README.md  pyproject.toml
Stride/: cli.py  stride.py
scripts/: run_stride.py
